[package]
name = "flinn_engdahl"
version = "0.1.1"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2018"
repository = "https://github.com/savage13/flinn_engdahl"
documentation = "https://docs.rs/flinn_engdahl"
homepage = "https://github.com/savage13/flinn_engdahl"
license = "BSD-2-Clause"
description = "Flinn-Engdahl Seismic And Geographic Regionalization - Rust Implementation"

[dependencies]
